temp commit to merge master branch

--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -635,29 +635,29 @@
 	
 	    <select1 ref="common_drug">
 		<label>Select Drug Commonly Used Drug if Able</label>
-		<item><label>Acetyl Salicylic Acid (Aspirin), tablet, 600 mg orally TDS x 3 days</label><value>acetyl_salicylic_acid_tablet_600_3_3</value></item>
-		<item><label>Amoxycillin (Amoxyl), suspension (syrup), 125 mg/5 ml orally TDS x 3 days</label><value>amoxycillin_syrup_125_3_5</value></item>
-		<item><label>Amoxycillin (Amoxyl), tablet, 250 mg orally TDS x 3 days</label><value>amoxycillin_tablet_250_3_5</value></item>
-		<item><label>Amoxycillin (Amoxyl), tablet, 500 mg orally TDS x 3 days</label><value>amoxycillin_tablet_500_3_5</value></item>
-		<item><label>Artemether lumefantrine (Co.Artem), tablet, 1 tablet (20/120 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art_tablet_1_2_3</value></item>
-		<item><label>Artemether lumefantrine (Co.Artem), tablet, 4 tablets (80/480 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art_tablet_4_2_3</value></item>
-		<item><label>Chlorpheniramine (Piriton), tablet, 1 mg orally BD x 3 days</label><value>chlorpheniramine_tablet_1_2_3</value></item>
-		<item><label>Chlorpheniramine (Piriton), tablet, 2 mg orally BD x 3 days</label><value>chlorpheniramine_tablet_2_2_3</value></item>
-		<item><label>Chlorpheniramine (Piriton), tablet, 4 mg orally BD x 3 days</label><value>chlorpheniramine_tablet_4_2_3</value></item>
-		<item><label>Co-trimoxazole (Septrin), tablet, 120 mg orally BD x 5 days</label><value>co_trimoxazole_tablet_120_2_5</value></item>
-		<item><label>Co-trimoxazole (Septrin), tablet, 240 mg orally BD x 5 days</label><value>co_trimoxazole_tablet_240_2_5</value></item>
-		<item><label>Co-trimoxazole (Septrin), tablet, 960 mg orally BD x 5 days</label><value>co_trimoxazole_tablet_960_2_5</value></item>
-		<item><label>Erythromycin, tablet, 500 mg orally QDS x 5 days</label><value>erythromycin_tablet_500_4_5</value></item>
-		<item><label>Ibuprofen (Brufen), tablet, 400 mg orally TDS x 3 days</label><value>ibuprofen_tablet_400_3_3</value></item>
-		<item><label>Metronidazole (Flagyl), tablet, 400 mg orally TDS x 5 days</label><value>metronidazole_tablet_400_3_5</value></item>
-		<item><label>Multivitamin (MV), tablet, 1 tablet orally once daily x 5 days</label><value>multivitamin_tablet_1_1_5</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 100 mg orally TDS x 3 days</label><value>paracetamol_tablet_100_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 200 mg orally TDS x 3 days</label><value>paracetamol_tablet_200_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 250 mg orally TDS x 3 days</label><value>paracetamol_tablet_250_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 500 mg orally TDS x 3 days</label><value>paracetamol_tablet_500_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 500 mg orally BD x 3 days</label><value>paracetamol_tablet_500_2_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 1000 mg (1 g) orally TDS x 3 days</label><value>paracetamol_tablet_1000_3_3</value></item>
-		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors_sachet_200__</value></item>
+		<item><label>Acetyl Salicylic Acid (Aspirin), tablet, 600 mg orally TDS x 3 days</label><value>acetyl_salicylic_acid-tablet-600-3-3</value></item>
+		<item><label>Amoxycillin (Amoxyl), suspension (syrup), 125 mg/5 ml orally TDS x 3 days</label><value>amoxycillin-syrup-125-3-5</value></item>
+		<item><label>Amoxycillin (Amoxyl), tablet, 250 mg orally TDS x 3 days</label><value>amoxycillin-tablet-250-3-5</value></item>
+		<item><label>Amoxycillin (Amoxyl), tablet, 500 mg orally TDS x 3 days</label><value>amoxycillin-tablet-500-3-5</value></item>
+		<item><label>Artemether lumefantrine (Co.Artem), tablet, 1 tablet (20/120 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art-tablet-1-2-3</value></item>
+		<item><label>Artemether lumefantrine (Co.Artem), tablet, 4 tablets (80/480 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art-tablet-4-2-3</value></item>
+		<item><label>Chlorpheniramine (Piriton), tablet, 1 mg orally BD x 3 days</label><value>chlorpheniramine-tablet-1-2-3</value></item>
+		<item><label>Chlorpheniramine (Piriton), tablet, 2 mg orally BD x 3 days</label><value>chlorpheniramine-tablet-2-2-3</value></item>
+		<item><label>Chlorpheniramine (Piriton), tablet, 4 mg orally BD x 3 days</label><value>chlorpheniramine-tablet-4-2-3</value></item>
+		<item><label>Co-trimoxazole (Septrin), tablet, 120 mg orally BD x 5 days</label><value>co_trimoxazole-tablet-120-2-5</value></item>
+		<item><label>Co-trimoxazole (Septrin), tablet, 240 mg orally BD x 5 days</label><value>co_trimoxazole-tablet-240-2-5</value></item>
+		<item><label>Co-trimoxazole (Septrin), tablet, 960 mg orally BD x 5 days</label><value>co_trimoxazole-tablet-960-2-5</value></item>
+		<item><label>Erythromycin, tablet, 500 mg orally QDS x 5 days</label><value>erythromycin-tablet-500-4-5</value></item>
+		<item><label>Ibuprofen (Brufen), tablet, 400 mg orally TDS x 3 days</label><value>ibuprofen-tablet-400-3-3</value></item>
+		<item><label>Metronidazole (Flagyl), tablet, 400 mg orally TDS x 5 days</label><value>metronidazole-tablet-400-3-5</value></item>
+		<item><label>Multivitamin (MV), tablet, 1 tablet orally once daily x 5 days</label><value>multivitamin-tablet-1-1-5</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 100 mg orally TDS x 3 days</label><value>paracetamol-tablet-100-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 200 mg orally TDS x 3 days</label><value>paracetamol-tablet-200-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 250 mg orally TDS x 3 days</label><value>paracetamol-tablet-250-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 500 mg orally TDS x 3 days</label><value>paracetamol-tablet-500-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 500 mg orally BD x 3 days</label><value>paracetamol-tablet-500-2-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 1000 mg (1 g) orally TDS x 3 days</label><value>paracetamol-tablet-1000-3-3</value></item>
+		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors-sachet-200--</value></item>
 		<item><label>Other Drug - Enter Manually</label><value>other</value></item>
 	</select1>
 	
@@ -826,29 +826,29 @@
 
     <select1 ref="common_drug">
 		<label>Select Drug Commonly Used Drug if Able</label>
-		<item><label>Acetyl Salicylic Acid (Aspirin), tablet, 600 mg orally TDS x 3 days</label><value>acetyl_salicylic_acid_tablet_600_3_3</value></item>
-		<item><label>Amoxycillin (Amoxyl), suspension (syrup), 125 mg/5 ml orally TDS x 3 days</label><value>amoxycillin_syrup_125_3_5</value></item>
-		<item><label>Amoxycillin (Amoxyl), tablet, 250 mg orally TDS x 3 days</label><value>amoxycillin_tablet_250_3_5</value></item>
-		<item><label>Amoxycillin (Amoxyl), tablet, 500 mg orally TDS x 3 days</label><value>amoxycillin_tablet_500_3_5</value></item>
-		<item><label>Artemether lumefantrine (Co.Artem), tablet, 1 tablet (20/120 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art_tablet_1_2_3</value></item>
-		<item><label>Artemether lumefantrine (Co.Artem), tablet, 4 tablets (80/480 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art_tablet_4_2_3</value></item>
-		<item><label>Chlorpheniramine (Piriton), tablet, 1 mg orally BD x 3 days</label><value>chlorpheniramine_tablet_1_2_3</value></item>
-		<item><label>Chlorpheniramine (Piriton), tablet, 2 mg orally BD x 3 days</label><value>chlorpheniramine_tablet_2_2_3</value></item>
-		<item><label>Chlorpheniramine (Piriton), tablet, 4 mg orally BD x 3 days</label><value>chlorpheniramine_tablet_4_2_3</value></item>
-		<item><label>Co-trimoxazole (Septrin), tablet, 120 mg orally BD x 5 days</label><value>co_trimoxazole_tablet_120_2_5</value></item>
-		<item><label>Co-trimoxazole (Septrin), tablet, 240 mg orally BD x 5 days</label><value>co_trimoxazole_tablet_240_2_5</value></item>
-		<item><label>Co-trimoxazole (Septrin), tablet, 960 mg orally BD x 5 days</label><value>co_trimoxazole_tablet_960_2_5</value></item>
-		<item><label>Erythromycin, tablet, 500 mg orally QDS x 5 days</label><value>erythromycin_tablet_500_4_5</value></item>
-		<item><label>Ibuprofen (Brufen), tablet, 400 mg orally TDS x 3 days</label><value>ibuprofen_tablet_400_3_3</value></item>
-		<item><label>Metronidazole (Flagyl), tablet, 400 mg orally TDS x 5 days</label><value>metronidazole_tablet_400_3_5</value></item>
-		<item><label>Multivitamin (MV), tablet, 1 tablet orally once daily x 5 days</label><value>multivitamin_tablet_1_1_5</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 100 mg orally TDS x 3 days</label><value>paracetamol_tablet_100_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 200 mg orally TDS x 3 days</label><value>paracetamol_tablet_200_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 250 mg orally TDS x 3 days</label><value>paracetamol_tablet_250_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 500 mg orally TDS x 3 days</label><value>paracetamol_tablet_500_3_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 500 mg orally BD x 3 days</label><value>paracetamol_tablet_500_2_3</value></item>
-		<item><label>Paracetamol (Panadol), tablet, 1000 mg (1 g) orally TDS x 3 days</label><value>paracetamol_tablet_1000_3_3</value></item>
-		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors_sachet_200__</value></item>
+		<item><label>Acetyl Salicylic Acid (Aspirin), tablet, 600 mg orally TDS x 3 days</label><value>acetyl_salicylic_acid-tablet-600-3-3</value></item>
+		<item><label>Amoxycillin (Amoxyl), suspension (syrup), 125 mg/5 ml orally TDS x 3 days</label><value>amoxycillin-syrup-125-3-5</value></item>
+		<item><label>Amoxycillin (Amoxyl), tablet, 250 mg orally TDS x 3 days</label><value>amoxycillin-tablet-250-3-5</value></item>
+		<item><label>Amoxycillin (Amoxyl), tablet, 500 mg orally TDS x 3 days</label><value>amoxycillin-tablet-500-3-5</value></item>
+		<item><label>Artemether lumefantrine (Co.Artem), tablet, 1 tablet (20/120 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art-tablet-1-2-3</value></item>
+		<item><label>Artemether lumefantrine (Co.Artem), tablet, 4 tablets (80/480 mg) orally BD x 3 days (0, 8, 24, 36, 60 hours)</label><value>artemether_lumefantrine_co_art-tablet-4-2-3</value></item>
+		<item><label>Chlorpheniramine (Piriton), tablet, 1 mg orally BD x 3 days</label><value>chlorpheniramine-tablet-1-2-3</value></item>
+		<item><label>Chlorpheniramine (Piriton), tablet, 2 mg orally BD x 3 days</label><value>chlorpheniramine-tablet-2-2-3</value></item>
+		<item><label>Chlorpheniramine (Piriton), tablet, 4 mg orally BD x 3 days</label><value>chlorpheniramine-tablet-4-2-3</value></item>
+		<item><label>Co-trimoxazole (Septrin), tablet, 120 mg orally BD x 5 days</label><value>co_trimoxazole-tablet-120-2-5</value></item>
+		<item><label>Co-trimoxazole (Septrin), tablet, 240 mg orally BD x 5 days</label><value>co_trimoxazole-tablet-240-2-5</value></item>
+		<item><label>Co-trimoxazole (Septrin), tablet, 960 mg orally BD x 5 days</label><value>co_trimoxazole-tablet-960-2-5</value></item>
+		<item><label>Erythromycin, tablet, 500 mg orally QDS x 5 days</label><value>erythromycin-tablet-500-4-5</value></item>
+		<item><label>Ibuprofen (Brufen), tablet, 400 mg orally TDS x 3 days</label><value>ibuprofen-tablet-400-3-3</value></item>
+		<item><label>Metronidazole (Flagyl), tablet, 400 mg orally TDS x 5 days</label><value>metronidazole-tablet-400-3-5</value></item>
+		<item><label>Multivitamin (MV), tablet, 1 tablet orally once daily x 5 days</label><value>multivitamin-tablet-1-1-5</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 100 mg orally TDS x 3 days</label><value>paracetamol-tablet-100-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 200 mg orally TDS x 3 days</label><value>paracetamol-tablet-200-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 250 mg orally TDS x 3 days</label><value>paracetamol-tablet-250-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 500 mg orally TDS x 3 days</label><value>paracetamol-tablet-500-3-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 500 mg orally BD x 3 days</label><value>paracetamol-tablet-500-2-3</value></item>
+		<item><label>Paracetamol (Panadol), tablet, 1000 mg (1 g) orally TDS x 3 days</label><value>paracetamol-tablet-1000-3-3</value></item>
+		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors-sachet-200--</value></item>
 		<item><label>Other Drug - Enter Manually</label><value>other</value></item>
 	</select1>
 	
